--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -30,6 +30,12 @@ dependencies:
   flutter:
     sdk: flutter
   expansion_tile_card: ^2.0.0
+  freezed_annotation: ^1.1.0
+  json_annotation: ^4.4.0
+  http: ^0.13.4
+  flutter_bloc: ^8.0.1
+
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +45,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.8
+  freezed: ^1.1.1
+  json_serializable: ^6.1.5
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
